[package]
name = "dataset"
version = "0.1.0"
authors = [
    "bvssvni <bvssvni@gmail.com>"
]
keywords = ["dataset"]
description = "A data set library"
license = "MIT"
repository = "https://github.com/bvssvni/dataset.git"
homepage = "https://github.com/bvssvni/dataset"

[lib]
name = "dataset"
path = "./src/lib.rs"
